<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_numero1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margenMainActivity"
        android:layout_marginLeft="@dimen/margenMainActivity"
        android:layout_marginTop="@dimen/margenMainActivity"
        android:layout_marginEnd="@dimen/margenMainActivity"
        android:layout_marginRight="@dimen/margenMainActivity"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edt_hint_numero1"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="@dimen/tamletra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_numero2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margenMainActivity"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edt_hint_numero2"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="@dimen/tamletra"
        app:layout_constraintEnd_toEndOf="@+id/edt_numero1"
        app:layout_constraintStart_toStartOf="@+id/edt_numero1"
        app:layout_constraintTop_toBottomOf="@+id/edt_numero1" />

    <Button
        android:id="@+id/bt_mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:onClick="calcular"
        android:text="@string/txt_bt_mas"
        android:textSize="@dimen/tamletra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_numero2" />

    <Button
        android:id="@+id/bt_menos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="calcular"
        android:text="@string/txt_bt_menos"
        android:textSize="@dimen/tamletra"
        app:layout_constraintBottom_toBottomOf="@+id/bt_mas"
        app:layout_constraintStart_toEndOf="@+id/bt_mas"
        app:layout_constraintTop_toTopOf="@+id/bt_mas" />

    <Button
        android:id="@+id/bt_por"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txt_bt_por"
        android:textSize="@dimen/tamletra"
        android:onClick="calcular"
        app:layout_constraintBottom_toBottomOf="@+id/bt_menos"
        app:layout_constraintStart_toEndOf="@+id/bt_menos"
        app:layout_constraintTop_toTopOf="@+id/bt_menos" />

    <Button
        android:id="@+id/bt_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_bt_division"
        android:textSize="@dimen/tamletra"
        android:onClick="calcular"
        app:layout_constraintEnd_toEndOf="@+id/bt_mas"
        app:layout_constraintStart_toStartOf="@+id/bt_mas"
        app:layout_constraintTop_toBottomOf="@+id/bt_mas" />

    <Button
        android:id="@+id/bt_resto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_bt_resto"
        android:textSize="@dimen/tamletra"
        android:onClick="calcular"
        app:layout_constraintEnd_toEndOf="@+id/bt_menos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bt_menos"
        app:layout_constraintTop_toBottomOf="@+id/bt_menos" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margenMainActivity"
        android:text="@string/txt_resultado"
        android:textSize="@dimen/tamresultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_resto" />

</androidx.constraintlayout.widget.ConstraintLayout>